# cpp-support-tool

./: .gitignore  CMakeLists.txt  README.md  draft.md  install.sh
src/: main.cpp
src/temp/: temp.cpp  temp.h
